<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="tip_calculator">Tip Calculator</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="tip_fragment">Tip Fragment</string>
    <string name="reverse_fragment">Reverse Fragment</string>
    <string name="menu_settings">Settings</string>
    <string name="reverse_calculator">Reverse Calculator</string>
    <string name="calculate">CALCULATE</string>
    <string name="tip_percentage">Tip Percentage(%)</string>
    <string name="title_activity_main2">Main2Activity</string>

    <string name="action_settings">Settings</string>

    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <!-- -
        This is an ad unit ID for an interstitial test ad. Replace with your own interstitial ad unit id.
        For more information, see https://support.google.com/admob/answer/3052638
    <!- -->
    <string name="banner_ad_unit_id">ca-app-pub-0959410565463062/4796433710</string>
    <string name="reverse_tip_calculator">Reverse Tip Calculator</string>
    <string name="tip_amount">Tip Amount</string>
    <string name="reset">Reset</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="tip_amount_left">Tip Amount Left</string>
    <string name="rate_us">Rate Us</string>
    <string name="no_bill_amount">Enter Bill Amount.</string>
    <string name="no_number_of_people">Enter Number of People to split check.</string>
    <string name="no_tip_amount">Enter Tip Amount.</string>
</resources>
