<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:paddingBottom="5dp"
            android:paddingTop="5dp"
            android:text="@string/reverse_tip_calculator"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff" />

        <LinearLayout
            android:id="@+id/ll1"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/bill_amount"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edBillAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textinputborder"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ll1"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/tip_amount_left"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/edTipAmount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/textinputborder"
                android:layout_weight="1"
                android:gravity="center"
                android:inputType="numberDecimal" />

        </LinearLayout>

        <Button
            android:id="@+id/btnTipCalc"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ll2"
            android:layout_marginTop="20dp"
            android:text="@string/calculate" />

        <LinearLayout
            android:id="@+id/ll3"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnTipCalc"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="20dp"
                android:text="@string/tip_percentage"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:id="@+id/lblTipPercentage"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="center"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </LinearLayout>

        <Button
            android:id="@+id/btnReset"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_below="@id/ll3"
            android:layout_marginTop="20dp"
            android:text="@string/reset" />

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnReset"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"
            ></com.google.android.gms.ads.AdView>

    </RelativeLayout>




</ScrollView>
